fix: render buttons properly on safari

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,7 +59,6 @@
 }
 
 button {
-  flex: 0;
   background-color: #000;
   color: #fff;
   border-top: none;
